# sd-practice

./: Cargo.toml  README.md  build.rs
src/: app.rs  error.rs  input.rs  main.rs
tests/: cli.rs
