[package]
name = "sd-practice"
version = "0.1.0"
authors = ["minoring <minho1350@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3.1"
regex = "1.3.9"
memmap = "0.7.0"
structopt = "0.3.15"
unescape = "0.1.0"
thiserror = "1.0.20"
tempfile = "3.1.0"

[dev-dependencies]
assert_cmd = "1.0.1"
anyhow = "1.0.31"

[build-dependencies]
structopt = "0.3.15"
